final lab3 submission

--- a/Lab3/Lab3.ipynb
+++ b/Lab3/Lab3.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lab Three - Wednesday Group 1\n",
+    "#### Tennison Liu 450224652\n",
+    "#### Junhua Situ 450034626\n",
+    "#### Jessie Zhang 480104780"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load in basic libraries."
    ]
   },
